# franklin-cli

./: .condarc  .gitignore  .nojekyll  CHANGELOG.md  CLAUDE.html  CLAUDE.md  README.md  bump_version.py  conda.sh  docker.html  franklin_installer.ps1  index.html  launch.command  notes.txt  publish_noarch.sh  pyproject.toml  release-tag.sh  requirements.txt  robots.txt  search.json  settings.json  setup.cfg  setup.py  sitemap.xml  student.html  w
.conda/: build_env.yml  meta.yaml
.github/: windows-installer.yml
.github/workflows/: README.md  build-docs-and-installers.yml  conda-release.yml  deploy.yml  docs-and-installers.yml  publish_conda.yml  pypi-release.yml  quarto-publish.yml
_conda-build/: build_env.yaml  meta.yaml
api/: index.html  launch_exercise.html  pull.html  run.html
conda-build/: build.sh  build_env.yaml  meta.yaml
data/: default_user_settings.json
data/templates/base/: .gitlab-ci.yml  README.md  tagged-release.sh
docs/: CLAUDE.md  CLAUDE.qmd  _quarto.yml  docs-build-render.sh  docs-run-notebooks.sh  index.qmd  objects.txt
docs/_inv/: griffe_objects.txt  python_objects.txt
docs/api/: _sidebar.yml  index.qmd
docs/notebooks/: example.ipynb  pdb.ipynb
docs/pages/: Get_started.md  Use_franklin.md  access.qmd  admin_components.qmd  admin_docker.qmd  admin_gitlab.qmd  admin_quick_reference.qmd  automatic_updates.qmd  commands.qmd  commands_admin.qmd  commands_core.qmd  commands_edu.qmd  computer_setup.qmd  conda.qmd  create_edit.qmd  custom.scss  data_analysis.ipynb  devel_quick_reference.qmd  developer_guide.qmd  developing.qmd  developing_exercises.qmd  docker.qmd  download.qmd  editing.qmd  edu_quick_reference.qmd  example.qmd  exercise_workflow.qmd  faq.qmd  full_commands_admin.qmd  full_commands_core.qmd  full_commands_edu.qmd  getting_started.ipynb  getting_started.qmd  getting_started_beginners.qmd  git.qmd  gitlab.qmd  infrastructure.qmd  installing_docker.qmd  installing_python.qmd  jupyter.qmd  (+30 more)
docs/pages/about/: docker.qmd  gitlab.qmd  plain_overview.md  ssh.qmd
docs/pages/admin/: gitlab.qmd  overview.qmd  set_up_your_own.qmd
docs/pages/educator/: _quarto.yml  index.qmd
docs/pages/student/: _quarto.yml  custom.scss  docker.qmd  index.qmd  jupyter.html  jupyter.qmd  jupyterlab.ipynb  terminal.qmd
docs/sandbox/: README.md
exercise_client/: __init__.py
franklin/: __init__.py  config.py  cutie.py  cutie_example.py  docker.py  docker_desktop.py  gitlab.py  jupyter.py  logger.py  rosalind.py  select.py  terminal.py  tldr.py  update.py  utils.py
install_scripts/chrome/: chrome_automation_package.md  install-chrome.ps1  install-chrome.sh
install_scripts/docker/: docker_desktop_automation_package.md
install_scripts/miniforge/: miniforge_installer.ps1  miniforge_installer.sh
install_scripts/pixi/: pixi_manager_bash.sh
mbg_exercise_client/: __init__.py
notebooks/: example-preview.html  example.html  example.out.ipynb  pdb.html
pages/: Get_started.html  Installationguide_get_started.html  Installing_python.qmd  Use_franklin.html  access.html  admin_components.html  admin_docker.html  admin_franklin_code.html  admin_gitlab.html  admin_quick_reference.html  automatic_updates.html  commands.html  commands_admin.html  commands_core.html  commands_edu.html  computer_setup.html  conda.html  create_edit.html  data_analysis.html  devel_quick_reference.html  developer_guide.html  developing.html  developing_exercises.html  docker.html  download.html  editing.html  edu_quick_reference.html  exercise_workflow.html  faq.html  full_commands_admin.html  full_commands_core.html  full_commands_edu.html  getting_started.html  getting_started_beginners.html  git.html  gitlab.html  installing_docker.html  installing_python.html  intalling.html  jupyter.html  (+31 more)
pages/about/: docker.html  git.html  gitlab.html  ssh.html
pages/admin/: conda_package.html  docker.html  gitlab.html  overview.html  set_up_your_own.html  source.html
pages/educator/: index.html  search.json
pages/student/: docker.html  index.html  jupyter.html  jupyterlab.html  search.json  terminal.html
pages/students/: index.html  search.json
pages/tutorials/: data_analysis.html  developing_exercises.html  jupyterlab.html  plotting.html  terminal.html
sandbox/: INSTALLER_README.md  Master-Installer.ps1  README.md  creating-trusted-installers.qmd  franklin_installer_gui.py  install-franklin.ps1  installer-cheatsheet.md  installer-comparison.md  installer-signing-quickstart.md  jupyter-lite.html  jupyter-lite.json  macos-gatekeeper.qmd  master-installer.sh  simplified-installers.md  test-syntax.ps1  web-install-direct.ps1  web-install-simple.ps1  web-installer-usage.md  web-installer.qmd  windows-security.qmd
sandbox/files/: javascript.html  p5.html  python.html
sandbox/install_scripts/: Install-Docker-Desktop.ps1  install_docker_osx.sh  macos_app_installer.txt  macos_info_plist.txt  simple_installer.ps1  usage.md  windows_nsis_installer.txt
sandbox/notebooks/: jupyter-lite.html
scripts/: auto_docker.py  install_colima.py  install_docker_engine.py  install_docker_win.ps1  installer_readme.md
site_libs/bootstrap/: bootstrap-01465f5886a61a45039a3581fcf9ad4a.min.css
src/franklin/: __init__.py  auth.py  chrome.py  config.py  config.yaml  crash.py  dependencies.py  desktop.py  docker.py  docker_desktop.py  gitlab.py  howto.py  interfaces.py  jupyter.py  logger.py  nbdeps.py  options.py  system.py  terminal.py  update.py  utils.py
test/: README.md  exercise.ipynb  run_tests.py  test_final.py  test_imports.py  test_interactive.py  test_modulename.py  test_simple.py  test_with_click.py
(+103 files in other folders)
