[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "franklin"
version = "0.17.9"
requires-python = ">= 3.9"
dependencies = [
    'requests>=2.32.3',
    'colorama>=0.4.6',
    'readchar>=4.0.5',
    'click',
    'click-plugins',
    'psutil',
    'jupyter',
    'packaging',
    'pyyaml',
    'pyperclip',
]
authors = [
  {name = "Kasper Munch", email = "kaspermunch@birc.au.dk"},
]
maintainers = [
  {name = "Kasper Munch", email = "kaspermunch@birc.au.dk"},
]
description = "Terminal client for Jupyter exercises"
readme = "README.md"
license = {text = "MIT License"}

[project.urls]
Homepage = "https://munch-group.org/franklin"
Documentation = "https://munch-group.org/franklin"
Repository = "https://github.com/munch-group/franklin.git"
Issues = "https://github.com/munch-group/franklin/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
franklin = "franklin:franklin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
franklin = ["*.yaml", "data/gitui/*.ron"]

