[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "franklin"
version = '0.24.43'
classifiers = [
  "Development Status :: 5 - Beta",
  "Intended Audience :: Education",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.9"
dependencies = [
    'requests>=2.32.3',
    'colorama>=0.4.6',
    'readchar>=4.0.5',
    'click',
    'click-plugins',
    'psutil',
    'jupyter',
    'packaging',
    'pyyaml',
    'pyperclip',
    'importlib_resources',
]
authors = [
  {name = "Kasper Munch", email = "kaspermunch@birc.au.dk"},
]
maintainers = [
  {name = "Kasper Munch", email = "kaspermunch@birc.au.dk"},
]
description = "Terminal client for Jupyter exercises"
keywords = ["teaching", "jupyter", "docker", "gitlab"]
readme = "README.md"
# license = "MIT"

[project.urls]
Homepage = "https://munch-group.org/franklin"
Documentation = "https://munch-group.org/franklin"
Repository = "https://github.com/munch-group/franklin.git"
Issues = "https://github.com/munch-group/franklin/issues"

[project.scripts]
franklin = "franklin:franklin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
franklin = [
  "data/*.yaml", 
  "data/gitui/*", 
  "data/templates/exercise/.devcontainer/devcontainer.json",
  "data/templates/exercise/.gitignore",
  "data/templates/exercise/.entrypoint.sh",
  "data/templates/exercise/.gitlab-ci.yml",
  "data/templates/exercise/.test-notebook.sh",
  "data/templates/exercise/Dockerfile",
  "data/templates/exercise/exercise.ipynb",
  "data/templates/exercise/pixi.toml",
  "data/templates/exercise/README.md",
  ]
  