[metadata]
name = franklin
version = 0.10.4
author = Kasper Munch
author_email = kaspermunch@birc.au.dk
description = "Terminal client for Jupyter exercises"
url = https://github.com/munch-group/franklin
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires=file: requirements.txt

[options.packages.find]
exclude =
    test*
    
[options.package_data]
franklin =
    data/*.txt, data/*.csv, data/*.pickle, data/*.h5

[options.entry_points]
console_scripts =
    franklin = franklin:franklin
